# python

02 - Estrutura de dados/: aula1_json.json  json_em_py.py  json_load.py
03 - Orientação a objetos/: 01.py  02.json  03_json_load.py  json_02.py
03 - Orientação a objetos/Interfaces/: 01_metodos_de_classe_e_estaticos.py
08 - Banco De Dados/: 02_gerenciando_db.py
09 - Desenvolvimento com django/mysite/: db.sqlite3  pyproject.toml
09 - Desenvolvimento com django/mysite/app/: admin.py  models.py  urls.py  views.py
09 - Desenvolvimento com django/mysite/app/migrations/: 0001_initial.py  0002_question_active.py
09 - Desenvolvimento com django/mysite/app/templates/: index.html
09 - Desenvolvimento com django/mysite/app/templates/app/: detail.html  index.html  results.html
09 - Desenvolvimento com django/mysite/contacts/: forms.py  models.py  urls.py  views.py
09 - Desenvolvimento com django/mysite/contacts/migrations/: 0001_initial.py
09 - Desenvolvimento com django/mysite/contacts/templates/contacts/: create.html  name.html
09 - Desenvolvimento com django/mysite/mysite/: settings.py  urls.py
09 - Desenvolvimento de API com flask/src/: app.py
Desafios/: desafio.py
